[package]
name = "dodge-the-creeps"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { path = "../../../godot", default-features = false, features = ["experimental-wasm"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "sqlite" ] }
rand = "0.8"
